fix: Fix mint fungible test for modularized
Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>